build(ini): adding necessary library

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ monitor_speed = 115200
 upload_protocol = esptool
 board_build.filesystem = littlefs
 lib_deps = 
-    jbtronics/ESP32Console@^1.2.1
-    knolleary/PubSubClient@^2.8
-    bblanchon/ArduinoJson@^6.20.0
+	jbtronics/ESP32Console@^1.2.1
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.20.0
 build_flags = -std=gnu++17
 build_unflags = -std=gnu++11
 
@@ -29,14 +29,22 @@ build_flags =
 [env:esp32devkitC-V4-debug]
 build_type = debug
 build_flags = 
-    ${env.build_flags}
-    -DCORE_DEBUG_LEVEL=5
-    -DCONFIG_LOG_COLORS=1
-    ${arduino_logs.build_flags}
+	${env.build_flags}
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_LOG_COLORS=1
+	${arduino_logs.build_flags}
 monitor_filters = direct, esp32_exception_decoder
+lib_deps = 
+	bblanchon/ArduinoJson@^7.0.4
+	adafruit/Adafruit ADS1X15@^2.5.0
+	openenergymonitor/EmonLib@^1.1.0
 
 [env:esp32devkitC-V4-release]
 build_type = release
 build_flags = 
-    ${env.build_flags}
-    -DCORE_DEBUG_LEVEL=0
+	${env.build_flags}
+    -DCORE_DEBUG_LEVEL=0lib_deps = 
+lib_deps = 
+	bblanchon/ArduinoJson@^7.0.4
+	adafruit/Adafruit ADS1X15@^2.5.0
+	openenergymonitor/EmonLib@^1.1.0
